--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "susy": "^2.2.12",
     "webpack": "^1.13.2"
   }
 }
