--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.4.1",
+    "breakpoint-sass": "^2.7.0",
     "breakpoint-slicer": "^2.0.0",
     "browser-sync": "^2.16.0",
     "browser-sync-webpack-plugin": "^1.1.2",
