--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "style-loader": "^0.13.1",
     "susy": "^2.2.12",
     "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "jquery": "^3.1.0"
   }
 }
